--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   height: 40vmin;
   pointer-events: none;
 }
+:root {
+  --primary-color:#7be934  ;
+  --secondary-color: #6161e3;
+  --background-color: #21212e;
+  --text-color:#5ECA16;
+  --accent-color: #21212e;
+  --accent2-color: #7be934;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -22,6 +30,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: absolute;
 }
 
 .App-link {
