--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,3 @@
-/* src/components/HomePage.css */
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 
@@ -18,7 +17,7 @@
     background-size: cover;
     background: var(--background-color);
     overflow: hidden;
-    font-family: 'Press Start 2P', cursive; /* Apply the custom font */
+    font-family: 'Press Start 2P', cursive;
 }
 .nav-section {
      display: flex;
@@ -31,7 +30,7 @@
      padding: 10px;
     position: relative;
 
-     background-color: rgba(45, 45, 45, 0.8); /* Semi-transparent background */
+     background-color: rgba(45, 45, 45, 0.8);
  }
 .about-me-title{
     font-size: 1.1rem;
@@ -298,17 +297,18 @@ vertical-layout2: name/occupation/location section
     height: 25vh;
 }
 .portal{
-    position: absolute;
 
+    position: absolute;
     scale: 60%;
     left: 125%;
     top: 42%;
     height: 200px;
+
 }
 
 .go-to-vs-background{
-    position: absolute;
 
+    position: absolute;
     width: 45vh;
     height: 30vh;
     top:30%;
@@ -316,24 +316,24 @@ vertical-layout2: name/occupation/location section
     border-color: black;
     border-radius: 20px;
     background-color: #282c34;
+
 }
 .greeting-section{
+
     position: fixed;
     top:30%;
     left: 30%;
     width: 10px;
     margin: 50px;
+
 }
 .greeting-animation{
 
-
     margin-top:10%;
-
-
     margin-left: 90%;
     margin-right: 80%;
-
     scale: 25%;
+
 }
 
 .welcome-section {
