--- a/src/components/VirtualSpaceComponent.css
+++ b/src/components/VirtualSpaceComponent.css
@@ -9,6 +9,7 @@
     height: 100vh;
     background-color: #21212e;
     overflow: hidden;
+
     transition: transform 0.3s ease, filter 0.3s ease;
     cursor: pointer;
 
@@ -16,6 +17,7 @@
 
 .virtual-space:active {
     cursor: pointer;
+
 }
 
 .room-items img:hover {
@@ -29,27 +31,40 @@
     color: #7be934;
     left: 0%;
     margin: 50px;
-    top: 10%;
-    font-size: 2rem;
+    top: 0%;
+    font-size: 1.3rem;
     line-height: 1.4;
     position: relative;
 }
+.welcometovs-text2{
+    width: 340px;
+    color:#5b1aa6;
+    align-content: center;
+    text-align: center;
+
+    left: 10%;
+    font-size: 0.9rem;
+    top:20%;
+    line-height: 1.3;
+    position: relative;
+
+}
 .welcometovs-img{
     scale: 50%;
-    top:50%;
-    left: 10%;
+
     position: absolute;
+    top:90%;
+    left: 0%;
 }
 .welcometovs-section{
     position: absolute;
-    top:10%;
-    left: 0%;
+    bottom:60%;
+    left: 75%;
+    overflow: hidden;
 }
 
 .vs-navarrows{
     scale:20%;
-
-
     position: relative;
     top:-15%;
 }
@@ -73,18 +88,7 @@
     left: 22%;
 }
 
-.welcometovs-text2{
-    width: 400px;
-    color:#5b1aa6;
-    align-content: center;
-    text-align: center;
 
-    left: 7.5%;
-    top:20%;
-    line-height: 1.3;
-    position: absolute;
-
-}
 
 
 .plant{
@@ -140,14 +144,20 @@
 
 .scroll-container {
     overflow-y: auto;
+    left: 0%;
+    overflow: hidden;
+    position: fixed;
+
 }
 
 .scroll-section {
     position: relative;
-    width: 1000px;
+    width: 1300px;
     height: 2500px;
     scale: 30%;
-    background-size:contain;
+
+
+    background-size:cover;
 }
 
 .desk{
@@ -236,4 +246,5 @@
 }
 .scroll-container {
     overflow-y: auto;
+
 }
